Add content script and popup functionality for Indeed Employer Scrape extension
- Implement message listener in content script to handle 'start' action
- Update manifest to match new URL for content script
- Add TypeScript types for Chrome API
- Modify package.json to include popup script in build process
- Create popup.html with a start button and associated styles
- Implement popup.ts to handle button click and send message to content script

--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["https://*.indeed.com/cmp/*"],
+      "matches": ["https://employers.indeed.com/candidates/view*"],
       "js": ["content.js"]
     }
   ],
