Update TypeScript configuration to specify root directory and include/exclude patterns
- Set rootDir to './' for clearer project structure
- Include all files in the project and exclude node_modules and dist directories

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,9 @@
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "rootDir": "./"
   },
-  }
+  "include": ["**/*"],
+  "exclude": ["node_modules", "dist"]
+}
